--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>TicTacToe</title>
 </head>
 <body>
+    <header>
+        Tic-Tac-Toe
+    </header>
     <board class="flex-grid">
         
     </board>
