able to determin winner

--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
 </head>
 <body>
     <header>
-        Tic-Tac-Toe
+        <h1>Tic-Tac-Toe</h1>
+        <status>
+            <button class="player1">Player 1</button>
+            <button class="playerturn"></button>
+            <button class="player2">Player 2</button>
+        </status>
     </header>
     <board class="flex-grid">
         
