--- a/index.html
+++ b/index.html
@@ -21,4 +21,7 @@
     </board>
   <script src="js/script.js"></script>  
 </body>
+<footer>
+    <button class="reset">Reset</button>
+</footer>
 </html>
