--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
     <board class="flex-grid">
         
     </board>
-  <script src="js/script.js"></script>  
 </body>
 <footer>
-    <button class="reset">Reset</button>
+    <button id="reset">Reset</button>
+ <script src="js/script.js"></script>  
 </footer>
+
 </html>
