--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
     <board class="flex-grid">
         
     </board>
-</body>
-<footer>
-    <button id="reset">Reset</button>
- <script src="js/script.js"></script>  
-</footer>
 
+<footer>
+    <button id="reset">Restart!</button>
+ 
+</footer>
+<script src="js/script.js"></script>  
+</body>
 </html>
